--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 :root {
     --primary-dark: #1c1c1c;
     --primary-semi: #3a3a3a;
-    --primary-light: #e4e4df;
+    --primary-light: #f2f2f2;
     --poppins-font: 'Poppins', sans-serif;
 }
 
