--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 :root {
     --primary-dark: #1c1c1c;
-    --primary-semi: #3a3a3a;
+    --primary-semi: #5a5a5a;
     --primary-light: #f2f2f2;
     --poppins-font: 'Poppins', sans-serif;
 }
@@ -78,17 +78,17 @@ a {
 
 }
 
-h1 h2 p {
+h1, h2, p {
     font-family: var(--poppins-font);
     margin: 0;
     padding: 0;
 }
 
 .nav i {
-    font-size: 30px;
+    font-size: 28px;
     color: var(--primary-dark);
     margin-right: 10px;
-    padding-bottom: 10px;
+    padding-bottom: 13px;
 }
 
 #home {
@@ -96,7 +96,7 @@ h1 h2 p {
     /* background-color: rgb(182, 182, 182); */
     width: 700px;
     justify-content: space-between;
-    height: 80vh;
+    height: 90vh;
     align-items: center;
 }
 
@@ -116,7 +116,7 @@ h1 h2 p {
     margin: 10px;
     border-radius: 25px;
     border-style: none;
-    border: 3px solid var(--primary-dark);
+    border: 2px solid var(--primary-dark);
     font-weight: 600;
     margin-bottom: 0;
 }
@@ -141,12 +141,12 @@ h1 h2 p {
     align-items: center;
 }
 
-.text-con p, h1, h2 {
+/* .text-con p, h1, h2 {
     margin: 0;
     padding: 0;
     display: flex;
     justify-content: center;
-}
+} */
 
 .text-con p {
     font-weight: 400;
@@ -170,3 +170,71 @@ h1 h2 p {
     margin-top: 0;
 }
 
+#about {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#about p {
+    color: var(--primary-semi);
+}
+
+.con-about {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+}
+
+.con-about .img img {
+    width: 340px;
+    height: 400px;
+    border-radius: 25px;
+    margin-right: 50px;   
+    margin-top: 20px;
+}
+
+.con-box {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-top: 50px;
+}
+
+.con-box p, center {
+    color: var(--primary-semi);
+}
+
+.box-expe {
+    width: 250px;
+    height: 160px;
+    border: 2px solid var(--primary-semi);
+    border-radius: 25px;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.box-expe i {
+    font-size: 30px;
+}
+
+.box-edu {
+    width: 250px;
+    height: 160px;
+    border: 2px solid var(--primary-semi);
+    border-radius: 25px;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.box-edu i {
+    font-size: 30px;
+}
