--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@ h4, h5 {
 .header {
     width: 100%;
     background-color: var(--primary-light);
+    /* position: fixed; */
 }
 
 .nav {
@@ -317,4 +318,51 @@ h1, h2, p {
 .box-item h4 {
     font-size: 15px;
     color: var(--primary-semi);
+}
+
+/* project section */
+#projects {
+    padding-top: 30px;
+
+}
+
+#projects .container {
+    display: flex;
+    height: 100vh;
+    /* padding-top: 25px; */
+    /* background-color: red; */
+    justify-content: space-around;
+    flex-wrap: wrap;
+
+}
+
+.box-project {
+    border: 2px solid var(--primary-semi);
+    border-radius: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 450px;
+    /* gap: 10px; */
+    padding: 5px 30px 20px 30px;
+    margin-top: 30px;
+}
+
+.box-project img {
+    width: 380px;
+    height: 300px;
+    border-radius: 25px;
+    margin-bottom: 20px;
+    padding: 0;
+    box-shadow: 0 0 6px var(--primary-semi);
+}
+
+.test {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+    height: 100vh;
 }
