--- a/responsive.css
+++ b/responsive.css
@@ -1,41 +1,37 @@
-@media (max-width: 878px) {
+@media screen and (max-width: 878px) {
     .container {
         width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
-}
 
-
-@media (max-width: 778px) {
     h1 {
         font-size: 2.5rem;
     }
-    .container {
-        width: 100vw;
-    }
-    .nav a {
-        margin-left: 10px;
-    }
+
     #home {
         flex-direction: column;
-        height: 100vh;
+        height: fit-content;
         padding: 20px;
-        margin-bottom: 25px;
         font-size: 20px;
     }
     #home .text {
         margin: 0;
     }
     .text .text-con {
+        margin-top: 2rem;
         gap: 0;
     }
     .text .icon {
         margin-top: 8px;
     }
-
+    
     #about {
-        margin-top: 5rem;
+        height:fit-content;
+        /* margin-top: 5rem; */
         font-size: 14px;
-        padding: 78px;
+        padding: 20px;
     }
     .con-about{
         flex-direction: column;
@@ -53,10 +49,104 @@
         text-align: justify;
     }
     #experience {
-        margin-top: 5rem;
-        margin-bottom: 5rem;
+        height: 42.5rem;
     }
-    #project {
+    #experience .con-box {
+        justify-content: center;
+        gap: 25px;
+    }
+    .box-experience {
+        width: 20em;
+        height: auto;
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        padding: 12px;
+    }
+    .box-experience h2 {
+        padding: 0;
+    }
+}
+
+
+@media screen and (max-width: 680px) {
+    .container {
+        width: 100vw;
+        margin: auto;
+    }
+    .nav-menu {
+        display: none;
+    }
+    #experience {
+        margin-bottom: 20rem;
+    }
+    #projects {
+        height: 100vh;
+    }
+}
+
+@media screen and (max-width: 728px) {
+    #experience {
+        height: fit-content;
+        margin: 0;
+    }
+    #experience .con-box {
+        flex-direction: column;
+    }
+    #projects {
         margin-top: 5rem;
+    }
+    .box-experience {
+        width: 26em;
+        gap: 20px;
+        padding: 20px;
+    }
+}
+
+@media screen and (max-width: 515px) {
+    #about {
+        height: fit-content;
+        font-size: 12px;
+    }
+    #experience {
+        height: fit-content;
+        margin: 0;
+    }
+    #projects {
+        margin-top: 5rem;
+    }
+    
+}
+
+@media screen and (max-width: 490px) {
+    .box-experience {
+        width: 20em;
+    }
+    .box-experience h2 {
+        font-size: 1.2rem;
+    }
+    .box-project {
+        font-size: 18px;
+    }
+}
+
+@media screen and (max-width: 300px) {
+    #home {
+        font-size: 18px;
+        padding: 10px;
+    }
+    .btn-cv {
+        padding: 8px 18px;
+    }
+    .btn-con {
+        padding: 8px 18px;
+    }
+    .box-experience {
+        padding: 10px 5px 10px 5px;
+        width: 15rem;
+    }
+    .box-project {
+        font-size: 11px;
     }
 }
