--- a/style.css
+++ b/style.css
@@ -18,6 +18,9 @@ body {
     background-color: var(--primary-light);
     margin: 0;
     padding: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 0;
 }
 
 ul {
@@ -61,7 +64,7 @@ h4, h5 {
 }
 
 .header {
-    width: 100%;
+    width: auto;
     background-color: var(--primary-light);
     /* position: fixed; */
 }
@@ -72,17 +75,22 @@ h4, h5 {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    right: 0;
 }
 
 .nav a {
     font-family: 'Poppins', sans-serif;
     font-size: 2rem;
-    margin-left: 5px;
+    padding-left: 8px;
     color: var(--primary-dark);
 }
 
 .logo {
     font-weight: 528;
+}
+
+.nav-menu {
+    display: flex;
 }
 
 .nav-list {
@@ -127,6 +135,7 @@ h1, h2, p {
 
 .btns {
     display: flex;
+    margin-bottom: 12px;
 }
 
 .btn-cv {
@@ -191,7 +200,6 @@ h1, h2, p {
     color: var(--primary-dark);
     font-size: 1.2em;
     margin: 5px;
-    margin-top: 0;
 }
 
 #about {
@@ -201,6 +209,7 @@ h1, h2, p {
     align-items: center;
     justify-content: center;
     font-size: 16px;
+    /* margin-top: 5rem; */
 }
 
 #about p {
@@ -272,7 +281,8 @@ h1, h2, p {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 25px;
+    font-size: 15px;
+    padding-top: 3.5rem; 
 }
 
 .con-box {
@@ -280,11 +290,12 @@ h1, h2, p {
     display: flex;
     justify-content: space-between;
     gap: 30px;
+    margin-top: 2em;
 }
 
 .box-experience {
-    width: 48%;
-    height: 330px;
+    width: 26em;
+    height: 22em;
     border: 2px solid var(--primary-semi);
     border-radius: 25px;
     flex: 1;
@@ -342,8 +353,7 @@ h1, h2, p {
 #projects .container {
     display: flex;
     height: 100vh;
-    /* padding-top: 25px; */
-    /* background-color: red; */
+    font-size: 24px;
     justify-content: space-around;
     flex-wrap: wrap;
 
@@ -356,15 +366,15 @@ h1, h2, p {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    height: 450px;
+    height: 18.75em;
     /* gap: 10px; */
-    padding: 5px 30px 20px 30px;
+    padding: 30px 30px 20px 30px;
     margin-top: 30px;
 }
 
 .box-project img {
-    width: 380px;
-    height: 300px;
+    width: 15.8em;
+    height: 12.5em;
     border-radius: 25px;
     margin-bottom: 20px;
     padding: 0;
