membuat hamburger menu

--- a/style.css
+++ b/style.css
@@ -59,11 +59,26 @@ h4, h5 {
     background-color: red;
 }
 
+.mode {
+    font-size: 2rem;
+}
+#hamburger {
+    display: none;
+    font-size: 40px;
+}
+
+.btn-close {
+    font-size: 3rem;
+    display: none;
+}
+
 .center {
     display: flex;
     justify-content: center;
     align-items: center;
 }
+
+
 
 .container {
     width: 928px;
@@ -98,12 +113,17 @@ h4, h5 {
 
 .nav-menu {
     display: flex;
+    color: var(--primary-dark);
+    flex-direction: row;
+    gap: 15px;
+    justify-content: center;
 }
 
 .nav-list {
     display: flex;
     column-gap: 2rem;
     align-items: center;
+
 }
 
 .nav-item a {
@@ -117,12 +137,6 @@ h1, h2, p {
     padding: 0;
 }
 
-.nav i {
-    font-size: 28px;
-    color: var(--primary-dark);
-    margin-right: 10px;
-    padding-bottom: 13px;
-}
 
 #home {
     display: flex;
