--- a/responsive.css
+++ b/responsive.css
@@ -9,8 +9,36 @@
     }
     
 
+
     h1 {
         font-size: 2.5rem;
+    }
+
+    .nav {
+        justify-content: space-between;
+        width: 100%;
+    }
+    
+    .nav-list {
+        z-index: 10;
+        flex-direction: column;
+        width: fit-content;
+        backdrop-filter: blur(5px);
+        box-shadow: 0 0 15px;
+        height: 100vh;
+        position: fixed;
+        top: 0;
+        right: -20px;
+        margin: 0;
+        align-items: self-end;
+        gap: 15px;
+        padding-right: 40px;
+        border-radius: 25px;
+        display: none;
+    }
+    
+    #hamburger {
+        display: flex;
     }
 
     #home {
@@ -81,9 +109,6 @@
     .container {
         width: 100vw;
         margin: auto;
-    }
-    .nav-menu {
-        display: none;
     }
     #experience {
         margin-bottom: 20rem;
